--- a/app/src/main/res/drawable/edittext_shape.xml
+++ b/app/src/main/res/drawable/edittext_shape.xml
@@ -5,10 +5,10 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#000" />
+    <solid android:color="@color/colorEditTextBackground" />
     <stroke
-        android:width="3dp"
-        android:color="#8AFF00"/>
+        android:width="2dp"
+        android:color="@color/colorEditTextStroke"/>
 
     <corners android:radius="8dp" />
 </shape>
