--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,14 +23,29 @@
         <item name="android:width">300dp</item>
     </style>
 
+<!--    Style para TextView en Form-->
+<style name="AppTheme.styleTextViewMensaje" parent="AppTheme">
+    <item name="android:textColor">@color/colorWhite</item>
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:width">300dp</item>
+</style>
+
 <!--    Style para EditText en Form-->
     <style name="AppTheme.styleEditText" parent="AppTheme">
-        <item name="android:drawable">@drawable/edittext_shape</item>
+        <item name="android:background">@drawable/edittext_shape</item>
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textColorHint">@color/colorWhite</item>
-        <item name="android:width">300dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">42dp</item>
+        <item name="android:layout_width">300dp</item>
+        <item name="android:paddingLeft">7dp</item>
+        <item name="android:paddingRight">7dp</item>
+    </style>
+
+<!--    Style para TextView en FragmentSuccess-->
+    <style name="AppTheme.style_tv_descripcion_fg_success">
+        <item name="android:textColor">#5B0DAF</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 
