--- a/app/src/main/res/layout/fragment_success_view.xml
+++ b/app/src/main/res/layout/fragment_success_view.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorUIPrimaryWhite"
     android:id="@+id/fragmentSuccessView"
-    tools:context=".SuccessViewFragment">
+    tools:context="sv.edu.bitlab.desafio.cristian.SuccessViewFragment">
 
 
     <ImageView
