--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,13 +11,17 @@
 <!--    Style para Boton Enviar-->
     <style name="AppTheme.styleButtonEnviar" parent="AppTheme">
         <item name="android:textAllCaps">true</item>
-        <item name="android:width">225dp</item>
+        <item name="android:width">250dp</item>
+        <item name="android:height">42dp</item>
+        <item name="android:textColor">@color/colorEnButton</item>
         <item name="android:background">@drawable/button_shape</item>
+        <item name="android:colorBackground">@color/colorF9</item>
     </style>
 
 <!--    Style para TextView en Form-->
     <style name="AppTheme.styleTextView" parent="AppTheme">
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textColor">@color/colorF9</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:width">300dp</item>
@@ -25,7 +29,8 @@
 
 <!--    Style para TextView en Form-->
 <style name="AppTheme.styleTextViewMensaje" parent="AppTheme">
-    <item name="android:textColor">@color/colorWhite</item>
+    <item name="android:fontFamily">@font/roboto</item>
+    <item name="android:textColor">@color/colorF9</item>
     <item name="android:layout_width">wrap_content</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:width">300dp</item>
@@ -36,6 +41,16 @@
         <item name="android:background">@drawable/edittext_shape</item>
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textColorHint">@color/colorWhite</item>
+        <item name="android:layout_height">42dp</item>
+        <item name="android:layout_width">300dp</item>
+        <item name="android:paddingLeft">7dp</item>
+        <item name="android:paddingRight">7dp</item>
+    </style>
+
+    <!--    Style para Spinner en Form-->
+    <style name="AppTheme.styleSpinner" parent="AppTheme">
+        <item name="android:background">@drawable/edittext_shape</item>
+        <item name="color"
         <item name="android:layout_height">42dp</item>
         <item name="android:layout_width">300dp</item>
         <item name="android:paddingLeft">7dp</item>
