--- a/app/src/main/res/layout/fragment_form_view.xml
+++ b/app/src/main/res/layout/fragment_form_view.xml
@@ -94,6 +94,9 @@
         app:layout_constraintTop_toBottomOf="@+id/etNumeroTelefonico"
         app:layout_constraintVertical_bias="0.49" />
 
+
+<!--    TODO: Buscar como cambiar el color a los items del Spinner -->
+
     <Spinner
         android:id="@+id/spinner_Informacion"
         style="@style/AppTheme.styleSpinner"
