--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,7 +50,7 @@
     <!--    Style para Spinner en Form-->
     <style name="AppTheme.styleSpinner" parent="AppTheme">
         <item name="android:background">@drawable/edittext_shape</item>
-        <item name="color"
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:layout_height">42dp</item>
         <item name="android:layout_width">300dp</item>
         <item name="android:paddingLeft">7dp</item>
