--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,12 @@
         <item name="android:paddingRight">7dp</item>
     </style>
 
+    <style name="AppTheme.styleTextViewVerColeccion" parent="AppTheme">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textColor">@color/colorBlancoBITLAB</item>
+    </style>
+
 <!--    Style para TextView en FragmentSuccess-->
     <style name="AppTheme.style_tv_descripcion_fg_success">
         <item name="android:textColor">#5B0DAF</item>
