--- a/app/src/main/res/layout/spinner_dropdown_layout.xml
+++ b/app/src/main/res/layout/spinner_dropdown_layout.xml
@@ -6,10 +6,7 @@
 
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/AppTheme.styleSpinner"
-    android:id="@+id/spinner_layout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:maxLines="1">
+    style="@style/AppTheme.style_spinner_dropdown_list"
+    android:id="@+id/spinner_dropdown_layout">
 
 </TextView>
