--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,13 +48,22 @@
     </style>
 
     <!--    Style para Spinner en Form-->
-    <style name="AppTheme.styleSpinner" parent="AppTheme">
+    <style name="AppTheme.style_spinner_dropdown_list" parent="AppTheme">
         <item name="android:background">@drawable/edittext_shape</item>
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">@color/colorPurpuraBITLAB</item>
+        <item name="android:fontFamily">@font/roboto</item>
         <item name="android:layout_height">42dp</item>
         <item name="android:layout_width">300dp</item>
+        <item name="android:ellipsize">marquee</item>
         <item name="android:paddingLeft">7dp</item>
         <item name="android:paddingRight">7dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="AppTheme.style_spinner_single_item" parent="AppTheme">
+        <item name="android:textColor">@color/colorBlancoBITLAB</item>
+        <item name="android:fontFamily">@font/roboto</item>
     </style>
 
     <style name="AppTheme.styleTextViewVerColeccion" parent="AppTheme">
