adding animations importing animations to use with lotti library

--- a/app/src/main/res/layout/fragment_collection_view.xml
+++ b/app/src/main/res/layout/fragment_collection_view.xml
@@ -3,44 +3,41 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragmentSuccessView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorUIPrimaryWhite"
-    android:id="@+id/fragmentSuccessView"
     tools:context="sv.edu.bitlab.desafio.cristian.CollectionViewFragment">
 
 
-    <ImageView
-        android:id="@+id/iv_green_circle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="265dp"
-        android:src="@drawable/ic_green_circle"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/just_chillin"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/iv_check"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_check"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_green_circle"
-        app:layout_constraintEnd_toEndOf="@+id/iv_green_circle"
-        app:layout_constraintStart_toStartOf="@+id/iv_green_circle"
-        app:layout_constraintTop_toTopOf="@+id/iv_green_circle" />
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/just_waiting" />
 
     <TextView
         android:id="@+id/tv_descripcion"
         style="@style/AppTheme.style_tv_descripcion_fg_success"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto"
         android:text="@string/tv_descripcion_fg_success"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_green_circle" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
