--- a/app/src/main/res/layout/fragment_form_view.xml
+++ b/app/src/main/res/layout/fragment_form_view.xml
@@ -55,8 +55,11 @@
                 style="@style/AppTheme.styleEditText"
                 android:layout_marginTop="8dp"
                 android:ems="10"
+                android:focusable="auto"
                 android:hint="@string/etNombre"
                 android:inputType="textPersonName"
+                android:selectAllOnFocus="false"
+                android:singleLine="false"
                 app:layout_constraintBottom_toTopOf="@+id/textView"
                 app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
                 app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
@@ -69,6 +72,7 @@
                 android:ems="10"
                 android:hint="@string/etCorreoElectronico"
                 android:inputType="textEmailAddress"
+                android:selectAllOnFocus="false"
                 app:layout_constraintBottom_toTopOf="@+id/tvNumeroTelefonico"
                 app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
                 app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
@@ -92,6 +96,7 @@
                 android:hint="@string/etNumeroTelefonico"
                 android:inputType="phone"
                 android:maxLength="8"
+                android:selectAllOnFocus="false"
                 app:layout_constraintBottom_toTopOf="@+id/tvInformacion"
                 app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
                 app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
@@ -116,6 +121,7 @@
                 style="@style/AppTheme.style_spinner_dropdown_list"
                 android:layout_marginTop="8dp"
                 android:entries="@array/spinner_bitlab_information_formview"
+                android:touchscreenBlocksFocus="false"
                 app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBottom"
                 app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
                 app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
@@ -191,32 +197,23 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:visibility="gone"
+        android:id="@+id/fragmentSuccessView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorUIPrimaryWhite"
-        android:id="@+id/fragmentSuccessView"
         tools:context="sv.edu.bitlab.desafio.cristian.CollectionViewFragment">
 
-
-        <ImageView
-            android:id="@+id/iv_green_circle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="265dp"
-            android:src="@drawable/ic_green_circle"
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/loading_animation_lottie"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/loading_circle" />
 
-        <ImageView
-            android:id="@+id/iv_check"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_check"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_green_circle"
-            app:layout_constraintEnd_toEndOf="@+id/iv_green_circle"
-            app:layout_constraintStart_toStartOf="@+id/iv_green_circle"
-            app:layout_constraintTop_toTopOf="@+id/iv_green_circle" />
 
         <TextView
             android:id="@+id/tv_descripcion"
@@ -224,13 +221,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="80dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="80dp"
             android:fontFamily="@font/roboto"
             android:text="@string/tv_descripcion_fg_success"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_green_circle" />
+            app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
